--- a/js/edit.css.css
+++ b/js/edit.css.css
@@ -154,13 +154,26 @@ span {
 }
 
 button.btn.btn-primary-3 {
-    background-color: #0e84dd;
-    color: #fff;
-    border: 1px solid #6c757d;
+  background-color: #fff;
+    color: #0e84dd;
+    border: 1px solid rgb(136, 189, 236);
     font-weight: 700;width: 95%;
     font-size: 18px;
     border-radius: 15px;
+    margin-top: 32px;
 }
+
+
+
+
+
+button.btn.btn-primary-3:hover {
+  background-color: #0e84dd;
+  color: #fff;
+}
+
+
+
 button.btn.btn-dange-3 {
     font-size: 18px;
     background-color: #fff;
