--- a/js/main.css
+++ b/js/main.css
@@ -32,9 +32,9 @@ img {
 }
 
 button#glogin {
-  width: 93%;
+  width: 100%;
   max-width: 300px;
-  padding: 10px;
+  padding: 7px;
   font-size: 1rem;
   margin: 10px;
   border-radius: 5px;
@@ -48,15 +48,39 @@ button#glogin {
   height: 1em;
   margin-right: 8px;
 }
-
-@media (min-width: 768px) {
-  .social-login button,
-  .sign-out {
-    width: auto;
-    padding: 10px 20px;
-  }
-
+@media (max-width: 767px) {
   .container {
-    padding: 40px;
+      padding: 10px;
   }
+
+  img {
+      max-width: 100%;
+  }
+
+  .facebook, #glogin {
+      width: 100%;
+      max-width: none; /* To override the previous max-width */
+      padding: 10px;
+  }
+
+  .social-login svg {
+      width: 1.5em;
+      height: 1.5em;
+  }
+
+  /* Add any additional mobile-specific styles here */
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+  /* Adjust the container padding for tablets */
+  .container {
+      padding: 20px;
+  }
+
+  /* Adjust button sizes and padding */
+  .facebook, #glogin {
+      padding: 12px;
+      font-size: 1.2rem;
+  }
+
+  /* Add any additional tablet-specific styles here */
 }
