--- a/js/chat.style.css
+++ b/js/chat.style.css
@@ -204,18 +204,18 @@ border: 1px solid blue;
 }
 
 .mobilebar-tab {
-height: 50px;
-
-width: 100vw;
-background-color: #fff;
-box-shadow: 0 10px 6px 0 rgba(0, 0, 0, 0.175);
-border-radius: 6px;
-overflow: hidden;
-border: 10px solid #fff;
-display: flex;
-position: relative;
-flex-shrink: 0;
-bottom: 0px;
+  height: 50px;
+  width: 100vw;
+  /* background-color: #fff; */
+  box-shadow: 0 10px 6px 0 rgba(0, 0, 0, 0.175);
+  border-radius: 6px;
+  overflow: hidden;
+  border: 10px solid #fff;
+  display: flex;
+  position: relative;
+  flex-shrink: 0;
+  bottom: 0px;
+  white-space-collapse: break-spaces;
 }
 
 .mobilebar-tab-item {
