--- a/js/edit.css
+++ b/js/edit.css
@@ -1,166 +1,166 @@
 
-    .navbar {
-       padding: 7px;
-     
-   }
-   
-   
-   .navbar .navbar-nav .nav-link {
-    color: #0d6efd;
-    font-size: 24px;
-    padding: 10px 20px;
-    font-weight: bold;
+  
+.navbar {
+  padding: 7px;
+
 }
-   i.fa-solid.fa-xmark {
-       font-size: 24px;
-       font-weight: 800;
-       margin-right: 7px;
-   }
-   .fa-xmark:hover {
-    
-     color: rgb(171, 55, 55); 
-     transform: scale(1.2); 
-   }
-   
-   p.peregraph {
-   font-size: 16px;
-    margin-left: 14px;
-    font-weight: 500;
-    margin-top: 40px;
+
+
+.navbar .navbar-nav .nav-link {
+color: #0d6efd;
+font-size: 24px;
+padding: 10px 20px;
+font-weight: bold;
+}
+i.fa-solid.fa-xmark {
+  font-size: 24px;
+  font-weight: 800;
+ 
+}
+.fa-xmark:hover {
+
+color: rgb(171, 55, 55); 
+transform: scale(1.2); 
+}
+
+p.peregraph {
+font-size: 16px;
+margin-left: 14px;
+font-weight: 500;
+margin-top: 40px;
 }
 
 .page {
-  text-align: center;
-  margin-bottom: 30px;
-  margin-top: 51px;
-  }
+text-align: center;
+margin-bottom: 30px;
+margin-top: 51px;
+}
 
 
 
-  textarea#edit-text {
-    width: 90%;
-    height: 100px;
-    resize: none;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 16px;
-    margin-bottom: 10px;
+textarea#edit-text {
+width: 90%;
+height: 100px;
+resize: none;
+border: 1px solid #ccc;
+border-radius: 5px;
+padding: 10px;
+font-size: 16px;
+margin-bottom: 10px;
 }
 
 
 .edit {
-    border: 2px solid #0d6efd;
-    border-radius: 7px;
- 
-    padding-top: 10px;
-    margin-top: 300px;
+border: 2px solid #0d6efd;
+border-radius: 7px;
+padding-top: 10px;
+
 }
 .media {
-    margin-top: 56px;
-    margin-left: -62px;
-    font-size: 22px;
-    font-weight: 700;
-    color: #495057;
-   
+
+font-size: 22px;
+font-weight: 700;
+color: #495057;
+
 }
 .icon {
-    margin-top: 25px;
-    margin-left: 34px;
-    font-size: 24px;
-    color: red;
-  font-weight: 700;
+/* margin-top: 25px;
+margin-left: 34px;
+font-size: 24px; */
+color: red;
+/* font-weight: 700; */
 }
 
-   img.im-2 {
-    width: 45%;
-    justify-content: center;
-    border-radius: 15px;
-   margin: 10px;
+img.im-2 {
+/* width: 45%;
+justify-content: center;
+border-radius: 15px;
+margin: 10px; */
+width: 100%;
 }
 
 .edit-3 {
-  border: 2px solid #0d6efd;
-    border-radius: 7px;
-    border: 2px solid #0d6efd;
-    border-radius: 7px;
-   padding-top: 10px;
-   margin-top: 20px;
+border: 2px solid #0d6efd;
+border-radius: 7px;
+border: 2px solid #0d6efd;
+border-radius: 7px;
+padding-top: 10px;
+margin-top: 20px;
 
-    
+
 }
 .col-sm-6.mk-1 {
-    display: inline-block;
-    width: 50%;
+display: inline-block;
+width: 50%;
 }
 
 
 .card-5 {
-    border: 1px solid #0d6efd;
-    border-radius: 8px;
-    margin: 1px;
+border: 1px solid #0d6efd;
+border-radius: 8px;
+margin: 1px;
 }
 
-    .card-body {
-      text-align: center;
-    }
+.card-body {
+ text-align: center;
+}
 
-   
-    i.fa-solid.fa-image {
-    font-size: 25px;
-    color: #0d6efd;
-     padding: 8px;
-    width: 100%;
+
+i.fa-solid.fa-image {
+font-size: 25px;
+color: #0d6efd;
+padding: 8px;
+width: 100%;
 }
 i.fa-solid.fa-camera {
-  font-size: 25px;
-    color: #0d6efd;
-   padding: 8px;
-    width: 100%;
-    
+font-size: 25px;
+color: #0d6efd;
+padding: 8px;
+width: 100%;
+
 }
 
 span {
-    color: #0e84dd;
-    font-weight: 700;
-    font-size: 18px;
+color: #0e84dd;
+font-weight: 700;
+font-size: 18px;
 }
 .card-4 {
-    margin-top: 25px;
+margin-top: 25px;
 }
 
 .delete {
-      margin: 7px auto;
-      padding: 10px;
-      text-align: center;
-    }
+ margin: 7px auto;
+ padding: 10px;
+ text-align: center;
+}
 
-    .row {
-      display: flex;
-      justify-content: space-between;
-    }
+.row {
+ display: flex;
+ justify-content: space-between;
+}
 
-    .col-sm-6 {
-      flex: 1;
-      margin: 5px;
-    }
+.col-sm-6 {
+ flex: 1;
+ margin: 5px;
+}
 
-    .btn {
-    width: 90%;
-    padding: 14px;
-    border-radius: 5px;
-    font-size: 16px;
-    
+.btn {
+width: 90%;
+padding: 14px;
+border-radius: 5px;
+font-size: 16px;
+
 }
 
 button.btn.btn-primary-3 {
-  background-color: #fff;
-    color: #0e84dd;
-    border: 1px solid rgb(136, 189, 236);
-    font-weight: 700;width: 95%;
-    font-size: 18px;
-    border-radius: 15px;
-    margin-top: 32px;
+background-color: #0e84dd;
+color: #fff;
+border: 1px solid rgb(136, 189, 236);
+font-weight: 700;width: 95%;
+font-size: 18px;
+border-radius: 15px;
+margin-top: 32px;
 }
 
 
@@ -168,43 +168,44 @@ button.btn.btn-primary-3 {
 
 
 button.btn.btn-primary-3:hover {
-  background-color: #0e84dd;
-  color: #fff;
+
+
+background-color: #fff;
+color: #0e84dd;
 }
 
 
 
 button.btn.btn-dange-3 {
-    font-size: 18px;
-    background-color: #fff;
-    color: red;
-    border: 1px solid red;
-    font-weight: 700;
-    border-radius: 15px;
+font-size: 18px;
+background-color: #fff;
+color: red;
+border: 1px solid red;
+font-weight: 700;
+border-radius: 15px;
 }
 .peregph {
-    padding: 23px;   cursor: pointer;
+padding: 23px;   cursor: pointer;
 } 
- 
-       .tex-3 {
-    font-size: 20px;
-    color: #333;
-    line-height: 1.5;
-    font-weight: 600;
+
+  .tex-3 {
+font-size: 20px;
+color: #333;
+line-height: 1.5;
+font-weight: 600;
 } 
 .hidden {
-    display: none;
-  }
+display: none;
+}
 
-  #textAreaDiv {
-    margin-top: 10px;
-  }
+#textAreaDiv {
+margin-top: 10px;
+}
 
-  #myTextArea {
-    width: 90%;
-    height: 150px;
-    box-sizing: border-box;
-    margin-left: 22px;
-  }
-
+#myTextArea {
+width: 90%;
+height: 150px;
+box-sizing: border-box;
+margin-left: 22px;
+}
 
