--- a/js/main.css
+++ b/js/main.css
@@ -24,7 +24,7 @@ img {
   max-width: 300px;
   padding: 7px;
   font-size: 1rem;
-  margin: 10px;
+  margin: 10px 0px;
   border-radius: 5px;
   border: none;
   cursor: pointer;
@@ -36,7 +36,7 @@ button#glogin {
   max-width: 300px;
   padding: 7px;
   font-size: 1rem;
-  margin: 10px;
+ 
   border-radius: 5px;
   border: none;
   cursor: pointer;
